--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,4 @@
         hsla(242, 74%, 61%, 0.8)   
     )!important;
 }
+/* "mt-10 px-10 py-5 border border-white uppercase font-semibold tracking-wider leading-none hover:bg-white hover:text-teal-600" type="button" */
